[tool.poetry]
name = "jedha-fs-s3-project"
version = "0.1.0"
description = "Classification project - dealing with imbalanced dataset"
authors = ["thefifthagreement <mickael.vitry@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
pandas = "^2.1.3"
seaborn = "^0.13.0"
matplotlib = "^3.8.2"
plotly = "^5.18.0"
imblearn = "^0.0"
scikit-learn = "^1.5.0"
nbformat = "^5.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
